2012-02-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/misc.h (grub_error_save): Fix cleaning grub_errno.

2012-02-08  Vladimir Serbinenko  <phcoder@gmail.com>

	Improve string. Gettextize.

2012-02-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Remove -Winline altogether and -Wmissing-prototypes on
	utils.
	* util/import_gcry.py: Add -Wno-strict-aliasing on checked modules.

2012-02-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c (grub_diskfilter_print_partmap)
	[GRUB_UTIL]: New function.
	(insert_array) [GRUB_UTIL]: Store partmaps.
	* include/grub/diskfilter.h (grub_diskfilter_pv) [GRUB_UTIL]: New member
	partmaps.
	(grub_diskfilter_print_partmap) [GRUB_UTIL]: New proto.
	* util/grub-probe.c (probe_partmap): Call grub_diskfilter_print_partmap.
	(probe_abstraction): Print diskfilter and not raid.
	Reported by: Lennart Sorensen

2012-02-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimage.c (generate_image): Explicitly init decompress_size.
	* util/grub-mkimagexx.c (MASK3): New define.
	(add_value_to_slot_20b): Use MASK3.
	(add_value_to_slot_21): Likewise.
	(relocate_addresses): Fix format specification.
	(load_image): Explicitly init symtab_section.

2012-02-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (grub_find_root_devices_from_mountinfo): Fix types.
	(grub_util_biosdisk_get_grub_dev): Fix format specification.

2012-02-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/full.c (grub_arch_dl_get_tramp_got_size): Enable
	on powerpc.
	Reported by: Lennart Sorensen

2012-02-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* gentpl.py: Add missing license header.
	* docs/grub.texi: Update copyright year.

2012-02-10  Grégoire Sutre  <gregoire.sutre@gmail.com>

	Source grub-mkconfig_lib from the build directory at build time.
	Suggested by: Vladimir Serbinenko.

	* gentpl.py (manpage): Set pkgdatadir to $(builddir) on help2man call.